polished updates with screenshots

--- a/index.ipynb
+++ b/index.ipynb
@@ -84,22 +84,37 @@
    "source": [
     "# Cloning github repos and Learn.co lessons\n",
     "\n",
-    "Now that you can navigate the file directory using the command line, you're ready to download some course materials from the web to your local environment. Create a folder on your computer for your course materials and navigate into it. Then create a subfolder titled \"Day1\" (or something similar) and navigate into that."
+    "Now that you can navigate the file directory using the command line, you're ready to download some course materials from the web to your local environment.  \n",
+    "\n",
+    "* Create a folder on your computer for your course materials and navigate into it. \n",
+    "* Then create a subfolder titled \"Day1\" (or something similar) and navigate into that.\n",
+    "\n",
+    "* Return to your web browser and navigate to the lesson you want to download.\n",
+    "* Click the github icon\n",
+    "\n",
+    "<img src=\"Learn_Github_Logo.png\">\n",
+    "\n",
+    "You'll be redirected to the associated github repository like this.  \n",
+    "* **Click the fork button**, as shown in order to create a copy to your personal account which you can edit and update.\n",
+    "<img src=\"Github_Fork_Button.png\">"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "On the learn.co website click the github icon on any lesson, and you will be redirected to that lesson's github repository where the lesson is stored."
+    "After a moment of this:\n",
+    "<img src=\"Github_Forking_In_Progress.png\" width=350>\n",
+    "You'll be redirected to your new personal copy of the repository:\n",
+    "<img src=\"Forked_Github_Page.png\" width=700>\n",
+    "## Finally: \n",
+    "* Press cmd+L to highlight the url bar and cmd+v to copy the url\n",
+    "* Return to terminal (you should be in your \"Day1\" folder)\n",
+    "* Type: **git clone** and paste your repo url (**cmd + v**)\n",
+    "\n",
+    "### Voila!  \n",
+    "#### The repository and all of its contents will be downloaded locally to your computer!"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
