changing copy command to cmd+c from cmd+v

--- a/index.ipynb
+++ b/index.ipynb
@@ -108,7 +108,7 @@
     "You'll be redirected to your new personal copy of the repository:\n",
     "<img src=\"Forked_Github_Page.png\" width=700>\n",
     "## Finally: \n",
-    "* Press cmd+L to highlight the url bar and cmd+v to copy the url\n",
+    "* Press **cmd+L** to highlight the url bar and **cmd+c** to copy the url\n",
     "* Return to terminal (you should be in your \"Day1\" folder)\n",
     "* Type: **git clone** and paste your repo url (**cmd + v**)\n",
     "\n",
